--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_athi.ltx
@@ -4,6 +4,7 @@ side												= scope
 gee36												= scope
 pn23f												= scope
 vulcan												= scope
+lazup_pl15											= scope
 
 ;--------------------------------------------------------------------------------------
 [devo]:addon
@@ -50,7 +51,7 @@ repair_type                                         = scope
 ;--------------------------------------------------------------------------------------
 [pn23f]:addon ;dummy scope for icon
 visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_case_weapon_small_world.ogf
-cost                		                        = 5230
+cost                		                        = 23230
 inv_name        		                            = st_addon_scope_gee36
 inv_name_short  		                            = st_addon_scope_gee36
 description    			                            = st_addon_scope_gee36_descr
@@ -69,11 +70,11 @@ inv_name        		                            = st_addon_scope_vulcan
 inv_name_short  		                            = st_addon_scope_vulcan
 description    			                            = st_addon_scope_vulcan_descr
 inv_weight        		                            = 0.4
-icons_texture                                       = ui\ui_icon_bas
+icons_texture                                       = ui\ui_icon_athi_scopes
 inv_grid_width     = 2
 inv_grid_height    = 1
-inv_grid_x         = 83
-inv_grid_y         = 5
+inv_grid_x         = 0
+inv_grid_y         = 4
 repair_type                                         = scope	
 ;--------------------------------------------------------------------------------------
 ![cortex]
