--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_frosty.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_weapon_addons_frosty.ltx
@@ -5,14 +5,14 @@ t12                                                = scope
 ;-----------------------------------------------------------------------------
 [t12]:addon
 visual				                                = dynamics\weapons\wpn_addon_world_models\wpn_scope_thermal_t12.ogf
-cost                		                        = 80000
+cost                		                        = 91500
 inv_name        		                            = st_addon_scope_t12
 inv_name_short  		                            = st_addon_scope_t12
 description    			                            = st_addon_scope_t12_descr
 inv_weight        		                            = 0.14 
-icons_texture                                       = ui\ui_icon_thermal_t12
+icons_texture                                       = ui\ui_icon_athi_scopes
 inv_grid_width     = 1
 inv_grid_height    = 1
-inv_grid_x         = 0
-inv_grid_y         = 0
+inv_grid_x         = 2
+inv_grid_y         = 1
 repair_type                                         = scope	
