phant0m files changes

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m_ak105.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m_ak105.ltx
@@ -2,9 +2,9 @@
 ; 45-rounder AK-105 option
 
 ![wpn_ak105_swamp]
-snd_reload				    = weapons\ak74m\ak74m_reload
-snd_reload_empty            = weapons\ak74m\ak74m_reload_empty
-snd_reload_misfire			= weapons\ak74m\ak74m_unjam
+snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
 snd_reload_grenade          = weapons\gp25\gp25_grenload_blnd
 
 snd_switch_mode				= weapons\ak74\ak74_switch_mode
@@ -15,9 +15,9 @@ snd_bore                    = $no_sound
 snd_switch_mode			    = weapons\ak74\ak74_switch_mode
 
 ![wpn_ak105_shakal]
-snd_reload				    = weapons\ak74m\ak74m_reload
-snd_reload_empty            = weapons\ak74m\ak74m_reload_empty
-snd_reload_misfire			= weapons\ak74m\ak74m_unjam
+snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
 snd_reload_grenade          = weapons\gp25\gp25_grenload_blnd
 
 snd_switch_mode				= weapons\ak74\ak74_switch_mode
