RD-74U sounds fix

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m.ltx
@@ -1,273 +1,273 @@
-; Patch for Weapon Sounds Tweaks and Fixes for GAMMA & Phant0ms Tactical Endgame Weapons [v0.4.0]
-; Main file
+; ; Patch for Weapon Sounds Tweaks and Fixes for GAMMA & Phant0ms Tactical Endgame Weapons [v0.4.0]
+; ; Main file
 
-![wpn_ak74u_isg]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_ak74u_isg]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_reload                  = weapons\aksu_prince\aksu_tact_reload
-snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
-snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
+; snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+; snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+; snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
 
-snd_bore                    = weapons\aksu_prince\aksu_tact_boring
-snd_draw                    = weapons\generic\rifle_draw
-snd_holster                 = weapons\generic\rifle_holster
-snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+; snd_bore                    = weapons\aksu_prince\aksu_tact_boring
+; snd_draw                    = weapons\generic\rifle_draw
+; snd_holster                 = weapons\generic\rifle_holster
+; snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
 
-![wpn_ak74u_m1_isg]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_ak74u_m1_isg]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_reload                  = weapons\aksu_prince\aksu_tact_reload
-snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
-snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
+; snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+; snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+; snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
 
-snd_bore                    = weapons\aksu_prince\aksu_tact_boring
-snd_draw                    = weapons\generic\rifle_draw
-snd_holster                 = weapons\generic\rifle_holster
-snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+; snd_bore                    = weapons\aksu_prince\aksu_tact_boring
+; snd_draw                    = weapons\generic\rifle_draw
+; snd_holster                 = weapons\generic\rifle_holster
+; snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
 
-![wpn_ak74_isg]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_ak74_isg]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_reload                  = weapons\aksu_prince\aksu_tact_reload
-snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
-snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
+; snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+; snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+; snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
 
-snd_bore                    = weapons\aksu_prince\aksu_tact_boring
-snd_draw                    = weapons\generic\rifle_draw
-snd_holster                 = weapons\generic\rifle_holster
-snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+; snd_bore                    = weapons\aksu_prince\aksu_tact_boring
+; snd_draw                    = weapons\generic\rifle_draw
+; snd_holster                 = weapons\generic\rifle_holster
+; snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
 
-![wpn_akm_isg]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_akm_isg]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_reload                  = weapons\aksu_prince\aksu_tact_reload
-snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
-snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
+; snd_reload                  = weapons\aksu_prince\aksu_tact_reload
+; snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
+; snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
 
-snd_bore                    = weapons\aksu_prince\aksu_tact_boring
-snd_draw                    = weapons\generic\rifle_draw
-snd_holster                 = weapons\generic\rifle_holster
-snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+; snd_bore                    = weapons\aksu_prince\aksu_tact_boring
+; snd_draw                    = weapons\generic\rifle_draw
+; snd_holster                 = weapons\generic\rifle_holster
+; snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
 
-![wpn_ak105_swamp]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_ak105_swamp]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-!snd_empty
+; !snd_empty
 
-![wpn_ak105_shakal]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_ak105_shakal]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-!snd_empty
+; !snd_empty
 
-![wpn_m4_tac]:wpn_m4a1_sounds
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_m4_tac]:wpn_m4a1_sounds
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_switch_mode			= weapons\ru556\ru556_firemode
+; snd_switch_mode			= weapons\ru556\ru556_firemode
 
-![wpn_m4_skyraga_tac]:wpn_m4a1_sounds
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_m4_skyraga_tac]:wpn_m4a1_sounds
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_switch_mode			= weapons\ru556\ru556_firemode
+; snd_switch_mode			= weapons\ru556\ru556_firemode
 
-![wpn_howa20]
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_howa20]
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_switch_mode			= weapons\ru556\ru556_firemode
+; snd_switch_mode			= weapons\ru556\ru556_firemode
 
-![wpn_sr25camo]:wpn_sr25_sounds
-!snd_shoot
-!snd_shoot1
-!snd_shoot2
-!snd_shoot3
-!snd_shoot4
-!snd_shoot6
-!snd_shoot7
-!snd_shoot8
-!snd_shoot9
-!snd_shoot10
-!snd_shoot11
-!snd_shoot12
-!snd_shoot13
-!snd_shoot14
-!snd_shoot15
-!snd_silncer_shot
-!snd_silncer_shot1
-!snd_silncer_shot2
-!snd_silncer_shot3
-!snd_silncer_shot4
+; ![wpn_sr25camo]:wpn_sr25_sounds
+; !snd_shoot
+; !snd_shoot1
+; !snd_shoot2
+; !snd_shoot3
+; !snd_shoot4
+; !snd_shoot6
+; !snd_shoot7
+; !snd_shoot8
+; !snd_shoot9
+; !snd_shoot10
+; !snd_shoot11
+; !snd_shoot12
+; !snd_shoot13
+; !snd_shoot14
+; !snd_shoot15
+; !snd_silncer_shot
+; !snd_silncer_shot1
+; !snd_silncer_shot2
+; !snd_silncer_shot3
+; !snd_silncer_shot4
 
-snd_reload				= weapons\ru556\ru556_reloadtac
-snd_reload_empty		= weapons\ru556\ru556_reloadempty
-snd_reload_misfire      = weapons\ru556\ru556_jam
-snd_switch_mode			= weapons\ru556\ru556_firemode
+; snd_reload				= weapons\ru556\ru556_reloadtac
+; snd_reload_empty		= weapons\ru556\ru556_reloadempty
+; snd_reload_misfire      = weapons\ru556\ru556_jam
+; snd_switch_mode			= weapons\ru556\ru556_firemode
