AK-105 kits sounds fix

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m_ak105.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_weapon_sounds_wstfg_phant0m_ak105.ltx
@@ -5,24 +5,18 @@
 snd_reload                  = weapons\aksu_prince\aksu_tact_reload
 snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
 snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
-snd_reload_grenade          = weapons\gp25\gp25_grenload_blnd
 
-snd_switch_mode				= weapons\ak74\ak74_switch_mode
-snd_draw				    = weapons\ak74\ak74_draw
-snd_holster				    = weapons\ak74\ak74_holster
-snd_bore                    = $no_sound
-
-snd_switch_mode			    = weapons\ak74\ak74_switch_mode
+snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+snd_draw                    = weapons\generic\siber_draw
+snd_holster                 = weapons\generic\siber_holster
+snd_bore                    = weapons\aksu_prince\aksu_tact_boring
 
 ![wpn_ak105_shakal]
 snd_reload                  = weapons\aksu_prince\aksu_tact_reload
 snd_reload_empty            = weapons\aksu_prince\aksu_tact_reload_empty
 snd_reload_misfire          = weapons\aksu_prince\aksu_tact_misfire
-snd_reload_grenade          = weapons\gp25\gp25_grenload_blnd
 
-snd_switch_mode				= weapons\ak74\ak74_switch_mode
-snd_draw				    = weapons\ak74\ak74_draw
-snd_holster				    = weapons\ak74\ak74_holster
-snd_bore                    = $no_sound
-
-snd_switch_mode			    = weapons\ak74\ak74_switch_mode
+snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
+snd_draw                    = weapons\generic\siber_draw
+snd_holster                 = weapons\generic\siber_holster
+snd_bore                    = weapons\aksu_prince\aksu_tact_boring
