RD-74 sounds fix

--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_akisg_anim_fix.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zz_akisg_anim_fix.ltx
@@ -2,8 +2,8 @@
 
 ![wpn_ak74_isg]
 snd_switch_mode				= weapons\ak74\ak74_switch_mode_quick
-snd_draw                    = weapons\generic\rifle_draw
-snd_holster                 = weapons\generic\rifle_holster
+snd_draw                    = weapons\generic\siber_draw
+snd_holster                 = weapons\generic\siber_holster
 snd_bore                = weapons\aksu_prince\aksu_tact_boring
 snd_reload              = weapons\ak104_tac_prince\ak104a_reload
 snd_reload_empty        = weapons\ak104_tac_prince\ak104a_reload_empty
