--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_3ds_gamma_scopes.ltx
@@ -181,7 +181,7 @@
 	magnification 		= 4		
 ;----------------------------------PICATINNY/WEST SCOPES---------------------------------
 ![t12]	--Thermal, 1x, 	s3ds_reticle_size should be set per gun to match red dot sight view
-	s3ds_reticl;e_size 	= 1.8
+	s3ds_reticle_size 	= 1.8
 	s3ds_image_type 	= 2
 	s3ds_reticle_type 	= 6
 	s3ds_min_zoom_1x	= 1	
