--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_z_misc_changes.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_z_misc_changes.ltx
@@ -10,3 +10,6 @@ description    			                            = st_addon_scope_lazup_generic_des
 
 ![1pn93n2_1gs]
 cost                		                        = 97490
+
+![gauss_sight]
+cost                		                        = 293200
